created connection to db and started express server, both testing good

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "express": "^4.17.1",
     "express-handlebars": "^4.0.4",
-    "msql": "^1.0.3"
+    "msql": "^1.0.3",
+    "mysql": "^2.18.1"
   }
 }
